@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Browse the board
class GetBoardQuery {
  +ListingKind? Kind
  +int Limit
  +string? Cursor
}
class GetBoardQueryHandler {
  +Handle(query: GetBoardQuery): Task<BoardPage>
}
class BoardPage {
  +IReadOnlyList<BoardListingDto> Listings
  +string? NextCursor
}
class BoardListingDto {
  +Guid ListingId
  +ListingKind Kind
  +string Title
  +string OwnerDisplayName
  +string Neighbourhood
}
class BoardStore {
  +loading: Signal<boolean>
  +load(kind: ListingKind): Promise<void>
}
GetBoardQueryHandler ..> GetBoardQuery : handles
GetBoardQueryHandler ..> BoardPage : returns
BoardPage "1" *-- "*" BoardListingDto : contains
BoardStore ..> BoardPage : receives through IListingService
@enduml
